--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -197,7 +197,17 @@
       "totalValue": "Valeur Totale",
       "avgProcessingTime": "Temps de Traitement Moyen",
       "processingRate": "Taux de Traitement"
-    },
+    }
+  },
+  "error": {
+    "pageNotFound": {
+      "title": "Page non trouvée",
+      "description": "La page que vous recherchez n'existe pas ou a été déplacée.",
+      "goHome": "Accueil",
+      "browseProducts": "Parcourir les produits",
+      "requestImport": "Demande d'importation"
+    }
+  },
     "orders": {
       "title": "Commandes Paiement à la Livraison",
       "subtitle": "Gérer les commandes clients",
